syntax = "proto3";

package ares.messaging;

import "CommandTemplate.proto";

message StepTemplate {
	string name = 1; // Name identification
	bool is_parallel = 2; // Flag indicating whether or not commands are to be executed sequentially or in parallel
	repeated CommandTemplate command_templates = 3; // Collection of (unqualified) command templates used to generate executable (device qualified) commands
	int64 index = 4; // Index of the collection in which executed this template
}